# wasmi-on-esp32c3

./: .gitignore  Cargo.toml  README.md  sdkconfig.debug
.cargo/: config.toml
application-c/: Makefile  README.md
application-c/src/: gpio.c  gpio.h  imports.h  main.c  runtime.h  uart.c  uart.h
application-cpp/: Makefile  README.md
application-cpp/src/: gpio.cpp  gpio.h  main.cpp  runtime.h  uart.cpp  uart.h
application-rs/: Cargo.toml  README.md
application-rs/.cargo/: config.toml
application-rs/examples/: pins_and_gpio.rs  print.rs
application-rs/src/: delay.rs  error.rs  gpio.rs  lib.rs  print.rs  runtime.rs  serial.rs
src/: bytes.rs  logging.rs  main.rs  runtime.rs
