[package]
name = "wasm-on-esp32c3"
version = "0.1.0"
authors = ["Bastian Kersting <bastian@cmbt.de>"]
edition = "2021"
categories = ["embedded", "hardware-support"]
keywords = ["embedded", "wasm", "idf", "esp-idf", "esp32"]
description = "A demonstration of executing WebAssembly on an ESP32-C3 RISC-V MCU"
repository = "https://github.com/1c3t3a/wasm-on-esp32c3.git"
license = "MIT"

[features]
native = ["esp-idf-sys/native"]

[dependencies]
esp-idf-sys = { version = "0.25", features = ["binstart"] }
wasmi = { version = "0.9.1", default-features = false, features = ["core", "reduced-stack-buffer"] }
esp-idf-hal = "0.25.0"

[build-dependencies]
embuild = "0.24.5"
anyhow = "1"
