[package]
name = "wasm-embedded-hal"
version = "0.1.0"
authors = ["Bastian Kersting <bastian@cmbt.de>"]
edition = "2021"
categories = ["embedded", "hardware-support"]
keywords = ["embedded", "wasm", "idf", "esp-idf", "esp32"]
description = "An embedded_hal conform implementation that compiles to WebAssembly"
repository = "https://github.com/1c3t3a/wasm-on-esp32c3.git"
license = "MIT"

[profile.release]
lto             = true
panic           = "abort"
debug           = true
incremental     = false
codegen-units   = 1
opt-level       = 'z'

[dependencies]
embedded-hal = { version = "0.2.6", features = ["unproven"] }
nb = "1.0.0"
